# modern_cpp

./: 02_std_array.cpp  CMakeLists.txt  README.md  main.cpp  std_array.cpp
src/: 00_println.cpp  02_std_array.cpp  03_std_iota.cpp  04_vectors.cpp  05_demangling.cpp  05_lambdas.cpp  07_ranges.cpp  08_replace.cpp  10_optional.cpp  11_async.cpp  12_console.cpp  13_move_semantics.cpp  13_templates.cpp  14_templates.cpp  15_memory_allocation.cpp  16_std_span.cpp  17_constructors.cpp  17_ostream.cpp  18_chrono.cpp  19_stack_vs_heap.cpp  20_typesafe_ids.cpp  21_calling_conventions.cpp  33_rt_programming.cpp  stack.hpp  stackdef.hpp  stackinst.cpp
tests/: 00_google_test.cpp  01_lvalues_rvalues.cpp  01_smart_pointers.cpp  01_test_constexpr.cpp  01_test_std_print.cpp  02_test_auto_keyword.cpp  02_test_std_array.cpp  03_test_std_iota.cpp  04_test_vector.cpp  05_test_lambdas.cpp  06_move_semantics.cpp  07_test_ranges.cpp  08_0_unique_pointers.cpp  08_1_unique_pointer_own_impl.cpp  08_2_shared_pointer.cpp  08_smart_pointers.cpp  09_test_std_span.cpp  10_test_optional.cpp  17_test_constructors.cpp  17_test_rule_of_three.cpp  18_test_chrono.cpp  22_std_launder.cpp
