cmake_minimum_required(VERSION 3.30)
project(modern_cpp)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    message(STATUS "Compiler Clang")
    add_compile_options(-Wall -Wextra -Wpedantic)
    add_compile_options(-stdlib=libc++)
    add_link_options(-stdlib=libc++)

elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    message(STATUS "Compiler GCC")
    add_compile_options(-Wall -Wextra -Wpedantic)

elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    message(STATUS "Compiler MSVC")
    add_compile_options(/W4 /WX /std:c++23)
endif()


add_executable(println src/00_println.cpp)
add_executable(auto_keyword src/01_auto_keyword.cpp)
add_executable(std_array src/02_std_array.cpp)
add_executable(std_iota src/03_std_iota.cpp)
add_executable(std_vector src/04_vectors.cpp)
add_executable(demangling src/05_demangling.cpp)
add_executable(lambdas src/05_lambdas.cpp)
add_executable(ranges src/07_ranges.cpp)
add_executable(replace src/08_replace.cpp)
add_executable(optional src/10_optional.cpp)
add_executable(async src/11_async.cpp)
add_executable(console src/12_console.cpp)
add_executable(move_semantics src/13_move_semantics.cpp)
add_executable(templates src/14_templates.cpp src/stackinst.cpp)
